# rusty_chew

./: Cargo.toml  README.md
.cargo/: config.toml
.helix/: languages.toml
images/: combos.odg  layouts.odg
src/: chew.rs  colors.rs  hardware.rs  keys.rs  layouts.rs  led.rs  left.rs  left_bak.rs  main.rs  mono.rs  options.rs  right.rs  software.rs  split.rs  utils.rs
src/hardware/: buzzer.rs  gpios.rs  led.rs  matrix.rs  uart.rs
src/software/: chew.rs  dynamicmacro.rs  keys.rs  macros.rs  modifiers.rs  mouse.rs  serial_usb.rs  status.rs
src/utils/: gpios.rs  led.rs  matrix.rs  modifiers.rs  mouse.rs  options.rs  serial.rs  timer.rs  uart.rs
