[package]
name = "rusty_chew"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "left"
path = "src/left.rs"

[[bin]]
name = "right"
path = "src/right.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

waveshare-rp2040-zero = "0.8.0"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"

embedded-io = "0.6.1"
pio-uart = "0.3.0"

usb-device = "0.3"
usbd-human-interface-device = "0.5.1"
usbd-serial = "0.2.2"

fugit = "0.3"
embedded-hal = { version = "1.0" }

heapless = "0.8.0"

cfg-if = "1.0.0"
